--- a/src/App.css
+++ b/src/App.css
@@ -11,16 +11,19 @@
 }
 
 .logo {
-  height: 2.3em;
+  height: 3em;
   /* padding: 1.5em; */
   will-change: filter;
   transition: filter 300ms;
 }
 
-.logo:hover,
-.activity-icon-container:hover {
+.logo:hover {
   /* filter: drop-shadow(0 0 2em #646cffaa); */
-  filter: drop-shadow(0 0 2em #129a73);
+  filter: drop-shadow(0 0 1.2em #575c1b);
+}
+
+.activity-icon-container:hover {
+  filter: drop-shadow(0 0 1.2em #129a73);
 }
 
 @media (max-width: 768px) {
@@ -40,3 +43,11 @@
     width: 100%;
   }
 }
+
+/* Content */
+.content {
+  height: calc(100% - 78px);
+  overflow-y: scroll;
+}
+
+/* End Content */
