--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,16 @@
   }
 }
 
+/* nav + content */
+.nav-content {
+  width: calc(100% - 76px);
+}
+
+/* end nav + content */
 /* Content */
 .content {
   height: calc(100% - 78px);
-  width: calc(100%);
+  width: 100%;
   overflow-y: scroll;
 }
 
