Revert "Made the navbar functional"
This reverts commit 763f8015da9e97e554afffba130afbbbfd432910, reversing
changes made to ff0503e1d02ab24f39a6d2b23b03de2986a4135b.

--- a/src/App.css
+++ b/src/App.css
@@ -11,19 +11,16 @@
 }
 
 .logo {
-  height: 3em;
+  height: 2.3em;
   /* padding: 1.5em; */
   will-change: filter;
   transition: filter 300ms;
 }
 
-.logo:hover {
-  /* filter: drop-shadow(0 0 2em #646cffaa); */
-  filter: drop-shadow(0 0 1.2em #575c1b);
-}
-
+.logo:hover,
 .activity-icon-container:hover {
-  filter: drop-shadow(0 0 1.2em #129a73);
+  /* filter: drop-shadow(0 0 2em #646cffaa); */
+  filter: drop-shadow(0 0 2em #129a73);
 }
 
 @media (max-width: 768px) {
@@ -43,15 +40,3 @@
     width: 100%;
   }
 }
-<<<<<<< HEAD
-=======
-
-/* Content */
-.content {
-  height: calc(100% - 78px);
-  width: calc(100%);
-  overflow-y: scroll;
-}
-
-/* End Content */
->>>>>>> fb5d98a24be9068ceb2066870fccd70161fe556f
