--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,13 @@
   transition: filter 300ms;
 }
 
-.logo:hover {
+@media (max-width:968.98px) {
+  .logo {
+    height: 2.5em;
+  }
+}
+
+screen .logo:hover {
   /* filter: drop-shadow(0 0 2em #646cffaa); */
   filter: drop-shadow(0 0 1.2em #575c1b);
 }
@@ -52,9 +58,15 @@
 /* end nav + content */
 /* Content */
 .content {
-  height: calc(100% - 78px);
+  max-height: calc(100% - 77.23px);
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
+}
+
+@media (max-width:767.98px) {
+  .content {
+    max-height: calc(100% - 57.07px);
+  }
 }
 
 /* End Content */
