--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -11,3 +11,9 @@
     background-color: rgba(255, 255, 255, 0.1);
     cursor: pointer;
 }
+
+@media (min-width:968.98px) {
+    .sidebar {
+        display: flex;
+    }
+}
